# sfml-template

./: .clang-format  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Main.cpp  main.cpp
